Fix vertically-aligned Text with overflowType="ellipsis"

--- a/xmlui/src/components/Text/Text.module.scss
+++ b/xmlui/src/components/Text/Text.module.scss
@@ -153,14 +153,16 @@ $textColor-Text-secondary--hover: createThemeVar("textColor-#{$component}-second
   }
 }
 
-@layer components {
+  @layer components {
   .text {
-    display: inline;
+    display: inline-block;
     overflow: hidden;
     text-overflow: ellipsis;
     margin: 0;
     padding: 0;
     min-height: fit-content;
+    line-height: normal;
+    vertical-align: top;
 
     &.default {
       @include textVariant("");
@@ -376,6 +378,8 @@ $textColor-Text-secondary--hover: createThemeVar("textColor-#{$component}-second
     overflow-wrap: break-word;
     white-space: nowrap;
     max-width: 100%;
+    vertical-align: top;
+    line-height: normal;
   }
 
   .preserveLinebreaks {
